--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title> </title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+  .four {
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(white);
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .error-image {
+    position: absolute;
+      top: -100px;
+      right: -100px;
+    height: auto;
+    width: 200px;
+  }
+
+  .error-image-two {
+    position: absolute;
+      bottom: -150px;
+      left: -100px;
+    height: auto;
+    width: 200px;
+    opacity: 0.4;
+    transform: rotate(180deg);
+  }
+
+  .error-man {
+    width: 50vw;
+    height: auto;
+    z-index: 100;
+  }
+
+  .error-header {
+    font-family: 'Roboto', sans-serif;
+    font-size: 50px;
+    margin-bottom: 0;
+    font-weight: 300;
+  }
+
+
+  .error-text {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    margin-bottom: 0;
+    color: #7C828F;
+    width: 50vw;
     text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
+    margin-bottom: 100px;
   }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
+<body class="four">
+  <img src="https://res.cloudinary.com/foenix-coding/image/upload/q_auto/v1575987466/inks_big_pill_dqob2a.png" alt="Error" class="error-image">
+  <img src="https://res.cloudinary.com/foenix-coding/image/upload/q_auto/v1575987466/inks_big_pill_dqob2a.png" alt="Error" class="error-image-two">
+  <img src="https://res.cloudinary.com/foenix-coding/image/upload/q_auto/v1576253137/error-mans_ekq73p.png" alt="" class="error-man">
+  <h1 class="error-header">404</h1>
+  <p class="error-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel ligula libero. </p>
 </body>
 </html>
