--- a/public/404.html
+++ b/public/404.html
@@ -59,6 +59,23 @@
     margin-bottom: 100px;
   }
 
+  .home-button {
+    font-family: 'Roboto', sans-serif;
+    display: inline-block;
+    padding: 15px 25px;
+    background-color: #F3A300;
+    border-color: #F3A300;
+    color: #FFF;
+    font-size: 14px;
+    border-radius: 10px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+  }
+
+  .home-button:hover {
+    background-color: #fbb72d;
+  }
+
   </style>
 </head>
 
@@ -68,5 +85,6 @@
   <img src="https://res.cloudinary.com/foenix-coding/image/upload/q_auto/v1576253137/error-mans_ekq73p.png" alt="" class="error-man">
   <h1 class="error-header">404</h1>
   <p class="error-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel ligula libero. </p>
+  <a class="home-button" href="/">HOME</a>
 </body>
 </html>
